add general electrical component

--- a/widgettest.html
+++ b/widgettest.html
@@ -5,7 +5,11 @@
 	<script type="text/javascript" src="init.js"></script>
 	<script type="text/javascript" src="quantity.js"></script>
 	<script type="text/javascript" src="node.js"></script>
+	<script type="text/javascript" src="component.js"></script>
 	<script type="text/javascript" src="resistor.js"></script>
+	<script type="text/javascript" src="hook.js"></script>
+	<script type="text/javascript" src="d3.slider.js"></script>
+	<link rel="stylesheet" href="d3.slider.css"></link>
 </head>
 <body>
 	<div id="quan">
