--- a/widgettest.html
+++ b/widgettest.html
@@ -1,6 +1,7 @@
 <html>
 <head>
 	<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/d3/3.5.17/d3.min.js"></script>
+	<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/numeric/1.2.6/numeric.js"></script>
 	<script type="text/javascript" src="helperWidgets.js"></script>
 	<script type="text/javascript" src="init.js"></script>
 	<script type="text/javascript" src="quantity.js"></script>
@@ -8,7 +9,9 @@
 	<script type="text/javascript" src="component.js"></script>
 	<script type="text/javascript" src="resistor.js"></script>
 	<script type="text/javascript" src="hook.js"></script>
+	<script type="text/javascript" src="circuits.js"></script>
 	<script type="text/javascript" src="d3.slider.js"></script>
+	
 	<link rel="stylesheet" href="d3.slider.css"></link>
 </head>
 <body>
