--- a/widgettest.html
+++ b/widgettest.html
@@ -1,5 +1,6 @@
 <html>
 <head>
+	<meta charset="UTF-8">
 	<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/d3/3.5.17/d3.min.js"></script>
 	<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/numeric/1.2.6/numeric.js"></script>
 	<script type="text/javascript" src="helperWidgets.js"></script>
