--- a/widgettest.html
+++ b/widgettest.html
@@ -4,15 +4,18 @@
 	<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/d3/3.5.17/d3.min.js"></script>
 	<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/numeric/1.2.6/numeric.js"></script>
 	<script type="text/javascript" src="helperWidgets.js"></script>
-	<script type="text/javascript" src="init.js"></script>
 	<script type="text/javascript" src="quantity.js"></script>
 	<script type="text/javascript" src="node.js"></script>
 	<script type="text/javascript" src="component.js"></script>
 	<script type="text/javascript" src="resistor.js"></script>
 	<script type="text/javascript" src="hook.js"></script>
 	<script type="text/javascript" src="circuits.js"></script>
+	<script type="text/javascript" src="plot.js"></script>
 	<script type="text/javascript" src="d3.slider.js"></script>
+	<script type="text/javascript" src="scale.js"></script>
+	<script type="text/javascript" src="init.js"></script>
 	
+	<link rel="stylesheet" href="style.css"></link>
 	<link rel="stylesheet" href="d3.slider.css"></link>
 </head>
 <body>
@@ -22,6 +25,11 @@
 	<div>
 		<h2>Circuit</h2>
 		<svg xmlns="http://www.w3.org/2000/svg" id="circuitDiagram" width="300px" height="300px">
+		</svg>
+	</div>
+	<div>
+		<svg xmlns="http://www.w3.org/2000/svg" id="plot" width="450px" height="450px">
+			
 		</svg>
 	</div>
 </body>
