--- a/widgettest.html
+++ b/widgettest.html
@@ -28,7 +28,9 @@
 		</svg>
 	</div>
 	<div>
-		<svg xmlns="http://www.w3.org/2000/svg" id="plot" width="450px" height="450px">
+		<div id="plotDiv">
+		</div>
+		<svg xmlns="http://www.w3.org/2000/svg" id="plot" width="350px" height="350px">
 			
 		</svg>
 	</div>
