--- a/widgettest.html
+++ b/widgettest.html
@@ -11,12 +11,11 @@
 	<script type="text/javascript" src="hook.js"></script>
 	<script type="text/javascript" src="circuits.js"></script>
 	<script type="text/javascript" src="plot.js"></script>
-	<script type="text/javascript" src="d3.slider.js"></script>
 	<script type="text/javascript" src="scale.js"></script>
+	<script type="text/javascript" src="slider.js"></script>
 	<script type="text/javascript" src="init.js"></script>
 	
 	<link rel="stylesheet" href="style.css"></link>
-	<link rel="stylesheet" href="d3.slider.css"></link>
 </head>
 <body>
 	<div id="quan">
