--- a/rccircuit.html
+++ b/rccircuit.html
@@ -14,6 +14,7 @@
 	<script type="text/javascript" src="scale.js"></script>
 	<script type="text/javascript" src="slider.js"></script>
 	<script type="text/javascript" src="rcCircuitInit.js"></script>
+	<title>Series RC Circuit Simulation</title>
 	
 	<link rel="stylesheet" href="style.css"></link>
 </head>
